# xiaoda-agent

./: .dockerignore  .env.example  .gitignore  .superpowers-skills  BUGFIX_PLAN_2026-07-19.md  CLAUDE.md  Dockerfile  LICENSE  Linux安装包检查报告.md  MEMORY.md  RAG-OPTIMIZATION-SPEC.md  README.md  SETUP.md  USAGE.md  _analyze_tests.py  _api_commit.py  _check_ci.py  _do_all.py  _fix_env.py  _fix_executescript.py  _git_push.sh  _migrate_v10_v18.py  _pip_out.txt  _run.bat  _run.ps1  _run_migrate.sh  _test_out.txt  _test_out2.txt  agent.py  agent_context.py  agent_core.py  agent_dispatcher.py  audit_fsrs_dsr_evidence.md  audit_fsrs_dsr_report.md  audit_j_space_evidence.md  audit_j_space_report.md  backfill_kg_kioxia.py  belief_router.py  botpy.log.2026-06-05  botpy.log.2026-06-06  (+66 more)
.dbg/: collect_streaming_evidence.py  qq-streaming-evidence.env  trae-debug-log-qq-streaming-evidence.ndjson
.scan_reports/: defect_scan_evidence.md  defect_scan_report.md  v0.4.83_review_report.md  v0.4.95_audit_report.md  v0.4.96_review_report.md
agent_core/: __init__.py  _shared.py  core.py  message_processor.py  shared_blackboard.py  shared_blackboard_db.py  structured_blackboard.py  sub_agent_manager.py  tool_executor.py  user_base.py  user_cli.py  user_qq.py  user_web.py
audit/: agent-system-mastery-spec.md  channel_audit_evidence.md  channel_audit_report.md  code_quality_audit_evidence.md  code_quality_audit_report.md  fix_spec_P0_evidence.md  fix_spec_P1.md
chaos/: __init__.py  _fault_types.py  fault_injecting_llm_client.py  reliability_bench.py  run_bench.py  tnr_protocol.py  tnr_scenarios.py  verify_degradation.py
config/: agent.json5  agent_routing.json  agent_routing_v2.json  persona_levels.yaml  security_patterns.yaml
core/: __init__.py  agent_introspection.py  agent_r_reflection.py  agent_work_record.py  app_exception.py  background_tasks.py  behavioral_direction.py  behavioral_health.py  behavioral_signal.py  bootstrap.py  cancel_token.py  capability_detector.py  chat_processor.py  circuit_breaker.py  config_reloader.py  conflict_supersession.py  constraint_injector.py  degradation.py  degradation_detector.py  degradation_strategy.py  delegation.py  doctor.py  dream_consolidation.py  dream_engine_v2.py  enhanced_router.py  error_codes.py  event_bus.py  failure_trigger.py  growth_narrative.py  intent_decomposition.py  intervention_loop.py  j_space_bootstrap.py  jieba_prewarm.py  lazy_loader.py  learning_feedback.py  learning_loop.py  mental_state.py  message.py  meta_cognition.py  metacognition_lite.py  (+20 more)
db/: database.py  db_analytics.py  db_concept.py  db_kg_v2.py  db_knowledge.py  db_learning.py  db_memory.py  db_notebook.py  db_temporal_memory.py  direction_registry.json  fts_utils.py  idempotent_migrator.py  index_manager.py  repair_migration.py  schema.sql  session_store.py  xp_state.json
deploy/: k8s.yaml  prometheus.yml  qq-agent.service
docs/: API.md  ARCHITECTURE.md  DEPRECATED_MODULES.md  GO_OPTIMIZATION_OPPORTUNITIES.md  IMPROVEMENT_PLAN.md  INDEX.md  SCENE_AWARE_REDESIGN.md  TODO.md  WEBUI_DESIGN.md  fix_spec_P0.md  fix_spec_P2.md  juejin-article.md  performance_audit_2026-07-20.md  quality_score_spec.md
doctor/: behavioral_health.py  memory_schema_readiness.py
emotion/: emoji_config.py  emotion_enum.py  emotion_llm.py  emotion_simple.py  emotion_state.py  nudge_engine.py  pad_model.py  portrait_manager.py  reunion_reflection.py  sticker_manager.py  tts_engine.py
evaluation/: __init__.py  memory_benchmark.py
market/: __init__.py  installer.py  manifest.py
memory/: bridge_memory.py  cognitive_memory.py  concept_graph.py  confirm_correct.py  context_compressor.py  context_governance.py  context_usage.py  emotional_memory.py  entity_extractor.py  entity_store.py  episodic_limiter.py  fluid_memory.py  fsrs_model.py  hopfield_layer.py  key_extractor.py  kg_search.py  knowledge_graph.py  knowledge_graph_v2.py  learning_manager.py  matrix_governance.py  memory_distiller.py  memory_manager.py  notebook_manager.py  ontology_complexity.py  preference_discovery.py  prompt_complexity.py  query_cache.py  query_transform.py  recall_scheduler.py  reranker.py  retrieval_assessor.py  salience.py  scope.py  spreading_activation.py  vector_store.py
plugins/: __init__.py  context.py  discovery.py  manager.py  manifest.py  permissions.py  sdk.py  testing.py
quality/: triple_axis_degradation.py
scripts/: auto-update.bat  auto-update.sh  auto_annotate.py  build-release.sh  check_annotations.py  check_coverage_drop.py  check_version_sync.py  count_project_stats.py  doctor.bat  doctor.sh  ensure-bridge.sh  generate_requirements_lock.py  healthcheck.sh  install-linux.sh  install-windows.ps1  installer.nsi  list_missing.py  migrate_credentials.py  open-browser.ps1  release_checklist.sh  scan_docstrings.py  start-windows.bat  start.sh
security/: anomaly_detector.py  canary.py  credential_vault.py  human_approval.py  instruction_hierarchy.py  permission_manager.py  sandbox_config.py  secrets_broker.py  security.py  ssrf_guard.py
specs/: jspace-workspace-optimization.md
tests/: bench_rag_latency.py  benchmark.py  benchmark_harness.py  capability_awareness_test.py  conftest.py  deep_integration_test.py  e2e_test.py  fault_injection.py  fix_verification.py  full_feature_test.py  full_restart_test.py  media_test_v2.py  round4_test.py  (+235 more)
(+255 files in other folders)
