[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoda-agent"
version = "0.5.1"
description = "多智能体 AI 助手 — 40+ 工具赋能，三通道交互"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Xiaoda Agent Team"},
]
keywords = ["ai", "agent", "chatbot", "qq-bot", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "Pillow>=10.4.0",
    "numpy>=1.26.0",
    "rich>=13.9.0",
    "pilk>=0.2.4",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
    "openai>=2.41.0",
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "jieba>=0.42.1",
    "pyyaml>=6.0",
    "qq-botpy>=1.2.1",
    "duckduckgo-search>=8.1.1",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "html2text>=2025.4.15",
    "pywebview>=5.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.28.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.scripts]
xiaoda-agent = "agent:main"

[tool.setuptools.packages.find]
include = [
    "agent*",
    "agent_core*",
    "agent_context*",
    "agent_dispatcher*",
    "belief_router*",
    "cli*",
    "cli_client*",
    "config*",
    "hooks*",
    "instinct_manager*",
    "xiaoli_agent*",
    "model_router*",
    "qq_bot_adapter*",
    "setup_wizard*",
    "slash_commands*",
    "task_orchestrator*",
    "tool_call_handler*",
    "core*",
    "db*",
    "emotion*",
    "memory*",
    "plugins*",
    "security*",
    "tool_engine*",
    "tools*",
    "transports*",
    "utils*",
    "web*",
]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.json5", "*.json", "*.md", "*.yaml", "*.yml"]
"web" = ["dist/**/*"]

[tool.ruff]
line-length = 120
target-version = "py311"